# dash_pi

./: .gitignore  CMakeLists.txt  lv_conf.h  lv_drv_conf.h
Protocol/: main.cpp  spi.cpp
fsae_dash_ui/: globals.xml  project.xml
fsae_dash_ui/components/: components.xml
fsae_dash_ui/fonts/: README.md
fsae_dash_ui/screens/: main_screen.xml  screens.xml
fsae_dash_ui/widgets/: dash_button.xml  dash_switch.xml  globals.xml
src/: CMakeLists.txt  main.cpp
src/Protocol/: CMakeLists.txt  SPI.cpp  SPI.hpp  uart.cpp  uart.hpp
